# Aegis

./: .gitignore  Cargo.toml  Makefile  README.md
aegis-core/: Cargo.toml
aegis-core/src/: config.rs  engine.rs  error.rs  inspector.rs  ip_filter.rs  lib.rs  rate_limiter.rs  request.rs
aegis-middleware/: Cargo.toml
aegis-middleware/src/: lib.rs  main.rs
aegis-proxy/: Cargo.toml  aegis.toml
aegis-proxy/src/: main.rs
